--- a/mapping.json
+++ b/mapping.json
@@ -1,24 +1,9 @@
 
-  curl -s -H "Content-Type: application/json" -XPOST localhost:9200/imdb/film/_bulk?pretty --data-binary "@D:/Alvaro/Universidad/4/Multimedia/MultimediaPractica2/data.json" -d'
-{
-    'mappings': {
-      'properties': {
-        'title':    { 'type': 'integer' },
-        'rating':   { 'type': 'float'   }, 
-        'year':     { 'type': 'keyword' }, 
-        'directors': { 'type': 'text'    },
-        'writers':  { 'type': 'text'    },
-        'actors':   { 'type': 'text'    },
-        'genres':   { 'type': 'keyword' }, 
-        'country':  { 'type': 'keyword' },
-        'language': { 'type': 'keyword' },
-        'runtime':  { 'type': 'integer' },
-        'summary':  { 'type': 'text'    }
-      }
-    }
-}'
+  curl -s -H "Content-Type: application/json" -XPOST localhost:9200/imdb/_doc/_bulk?pretty --data-binary "@data.json" -d'
 
-{'mappings':{'properties':{'title':{'type':'integer'},'rating':{'type':'float'},'year':{'type':'keyword'},'directors':{'type':'text'},'writers':{'type':'text'},'actors':{'type':'text'},'genres':{'type':'keyword'},'country':{'type':'keyword'},'language':{'type':'keyword'},'runtime':{'type':'integer'},'summary':{'type':'text'}}}}
+
+{"mappings":{"properties":{"title":{"type":"text"},"rating":{"type":"float"},"year":{"type":"keyword"},"directors":{"type":"keyword"},"writers":{"type":"keyword"},"actors":{"type":"keyword"},"genres":{"type":"keyword"},"country":{"type":"keyword"},"language":{"type":"keyword"},"runtime":{"type":"integer"},"summary":{"type":"text"},"poster":{"type":"text"}}}}
+
 
 
 curl -X PUT "localhost:9200/nombre_indice?pretty" -H 'Content-Type:
